# apksideloader

./: .gitignore  Pipfile  README.md  meson.build  pyproject.toml  requirements.txt  setup.cfg  setup.py
apksideloader/: adb.py  apk.py  cli.py  crypto.py  gui.py
data/: com.gallagherhome.apksideloader.desktop  com.gallagherhome.apksideloader.desktop.in
packaging/: apksideloader.spec  copyright
