[build-system]
requires = ["mesonpep517", "ninja", "pytest"]
build-backend = "mesonpep517.buildapi"

[tool.mesonpep517]
build-backend = "mesonpep517.buildapi"

[tool.mesonpep517.metadata]
module = "apksideloader"
author = "Stephen Gallagher"
author-email = "Stephen@gallagherhome.com"
summary = "A tool to sideload Android packages onto Chromebooks"
home-page = "http://github.com/sgallagher/apksideloader"
requires = [
    "click >= 7.0.0",
    "adb-shell",
    "PyGObject >= 3.30.4"
]

[tool.mesonpep517.entry-points]
'console_scripts' = [
    'apksideloader = apksideloader.cli:main',
]
