[metadata]
name = apksideloader
version = 0.3.0
license = GPLv3+
description = A tool to sideload Android packages onto Chromebooks
keywords = android apk sideload
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    Topic :: System :: Installation/Setup
    Topic :: System :: Software Distribution
    Environment :: Console
    Environment :: X11 Applications :: GTK
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: POSIX
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
url = http://github.com/sgallagher/apksideloader
author = Stephen Gallagher
author_email = Stephen@gallagherhome.com

[options]
packages = apksideloader
install_requires =
    setuptools~=49.6.0
    PyGObject~=3.40.1
    click~=8.0.1
    cryptography
    adb_shell~=0.4.0

[options.entry_points]
console_scripts =
    apksideloader = apksideloader.cli:main

[options.data_files]
share/applications = data/com.gallagherhome.apksideloader.desktop
share/icons/hicolor/192x192 = data/icons/hicolor/192x192/android_icon.png
